# vpmem-tempest-plugin

./: .gitignore  README.rst  setup.cfg
vpmem_tempest_plugin/: README.rst  plugin.py
vpmem_tempest_plugin/tests/scenario/: manager.py  test_server_basic_ops.py  test_server_pmem_ops.py
