[metadata]
name = vpmem-tempest-plugin
summary = Tempest plugin for VPMEM tests
home-page = https://docs.openstack.org/tempest/latest/
author = Luyao Zhong
author-email = luyao.zhong@intel.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5


[entry_points]
tempest.test_plugins =
    vpmem-tempest-plugin = vpmem_tempest_plugin.plugin:VPMEMTempestPlugin
